--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,9 @@
 <md-toolbar color="primary">
-  <button (click)="openSildBar()">菜单</button>
+  <!-- <button md-icon-button (click)="openSildBar()">
+   <md-icon>compare_arrows</md-icon>
+  </button> -->
+  <span class="side-icon">
+    <md-icon svgIcon="category"></md-icon>
+  </span>
   <span>企业协作平台</span>
 </md-toolbar>
