--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
  <md-sidenav-container>
-   <md-sidenav #sidenav mode="side">
+   <md-sidenav #sidenav mode="over">
      <app-sidebar>
 
      </app-sidebar>
@@ -10,6 +10,7 @@
     </header>
     <main>
       <!-- <button (click)="sidenav.toggle  ()">打开侧边栏</button> -->
+      <router-outlet></router-outlet>
     </main>
     <footer>
       <app-footer></app-footer>
