--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,9 +1,6 @@
 <md-toolbar color="primary">
-  <!-- <button md-icon-button (click)="openSildBar()">
-   <md-icon>compare_arrows</md-icon>
-  </button> -->
-  <span class="side-icon">
-    <md-icon svgIcon="category"></md-icon>
-  </span>
+  <button md-icon-button (click)="openSildBar()">
+   <md-icon>reorder</md-icon>
+  </button>
   <span>企业协作平台</span>
 </md-toolbar>
