--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -3,9 +3,9 @@
     <h3>{{header}}</h3>
   </div>
   <div class="fill">
-    <button md-button>
+    <button md-button type="button" (click)="onNewTaskClick()">
       <md-icon>add_circle_outline</md-icon>
-      <span>新任务</span>
+      <span>新任务1</span>
     </button>
   </div>
   <div>
@@ -16,15 +16,15 @@
 </div>
 <md-menu #menu="mdMenu">
   <button md-menu-item>
-    <md-icon>mode_edit</md-icon>
+    <md-icon class="material-icon">mode_edit</md-icon>
     <span>修改列表名称</span>
   </button>
   <button md-menu-item>
-    <md-icon svgIcon="move"></md-icon>
+    <md-icon class="material-icon" svgIcon="move"></md-icon>
     <span>移动列表所有内容</span>
   </button>
   <button md-menu-item>
-    <md-icon>delete_forever</md-icon>
+    <md-icon class="material-icon">delete_forever</md-icon>
     <span>删除列表</span>
   </button>
 </md-menu>
