--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -15,15 +15,15 @@
   </div>
 </div>
 <md-menu #menu="mdMenu">
-  <button md-menu-item>
+  <button md-menu-item (click)="onEditListClick()">
     <md-icon class="material-icon">mode_edit</md-icon>
     <span>修改列表名称</span>
   </button>
-  <button md-menu-item>
+  <button md-menu-item (click)="onMoveAllClick()">
     <md-icon class="material-icon" svgIcon="move"></md-icon>
     <span>移动列表所有内容</span>
   </button>
-  <button md-menu-item>
+  <button md-menu-item (click)="onDelListClick()">
     <md-icon class="material-icon">delete_forever</md-icon>
     <span>删除列表</span>
   </button>
