--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -2,8 +2,10 @@
   'priority-normal': item.youxian===3,
   'priority-important': item.youxian===2,
   'priority-emergency': item.youxian===1
-}">
-  <md-checkbox class="completion-status" [checked]="item.completed"></md-checkbox>
+}"
+(click)="onItemClick()"
+>
+  <md-checkbox (click)="onCheckBoxClick($event)" class="completion-status" [checked]="item.completed"></md-checkbox>
   <div class="content" [ngClass]="{completed: item.completed}">
     <div md-line>
       <span [md-tooltip]="item.desc">{{item.desc}}</span>
