--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,12 +1,13 @@
-<app-project-item *ngFor="let project of projects" 
-[item]="project" 
-class="card" 
-(Invites)="launchInviteDialog()"
-(editCLick)="loanchUpdateDialog()"
-(deleteClick)="loanchConfirmDialog()"
->
-
-</app-project-item>
-<button class="fab-button" md-fab type="button" (click)="launchInviteDialog()">
+<div [@listAnim]="projects.length" class="container">
+  <app-project-item *ngFor="let project of projects"
+                    [item]="project"
+                    class="card"
+                    (Invites)="launchInviteDialog()"
+                    (editCLick)="loanchUpdateDialog()"
+                    (deleteClick)="loanchConfirmDialog(project)"
+  >
+  </app-project-item>
+</div>
+<button class="fab-button" md-fab type="button" (click)="openNewProjectDialog()">
   <md-icon>add</md-icon>
 </button>
