--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -25,11 +25,11 @@
   <md-card>
     <md-card-header>
       <md-card-title>每日佳句</md-card-title>
-      <md-card-subtitle>满足感在于不断的努力，而不是现有成就。全新努力定会胜利慢慢。</md-card-subtitle>
+      <md-card-subtitle>{{quote.cn}}</md-card-subtitle>
     </md-card-header>
-    <img md-card-image src="../../../assets/img/pic/dqRdtm2spBk.jpg" alt="">
+    <img md-card-image [src]="quote.pic" alt="">
     <md-card-content>
-       Somebody please solve identity, specifically, physical address fanout. We should have DNS for that already; you give a pointer
+       {{quote.en}}
     </md-card-content>
   </md-card>
 </form>
